force-app/main/default/objects/Sub_Segment_Mapping__c/Sub_Segment_Mapping__c.object-meta.xml
<CustomObject>
    <label>Sub Segment Mapping</label>
    <nameField>
        <displayFormat>SS Mapping-{0000}</displayFormat>
        <label>Sub Segment Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sub Segment Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>