force-app/main/default/objects/Sub_Segment_Mapping__c/fields/Sub_Segment_Code__c.field-meta.xml
<CustomField>
    <fullName>Sub_Segment_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sub Segment Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>