force-app/main/default/objects/Sub_Segment_Mapping__c/fields/Zone_Team__c.field-meta.xml
<CustomField>
    <fullName>Zone_Team__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zone / Team</label>
    <length>20</length>
    <type>Text</type>
</CustomField>