force-app/main/default/objects/Sub_Segment_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Segment_Team__c</columns>
    <columns>Sub_Segment_Code__c</columns>
    <columns>Zone_Team__c</columns>
    <columns>Zone_Code_Team_Code__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>